--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <base target="_top">
   </head>
   <body>
-    <a href="<?= url ?>">Download .json text file </a>
+    <a href="<?= url ?>">View .json text file </a>
+    <p>
+    <a href="<?= url+"?download" ?>">Download .json text file </a>
   </body>
 </html>
-
 
 
